test/parse/module/bad-memory-empty.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (memory))
(;; STDERR ;;;
out/test/parse/module/bad-memory-empty.txt:3:16: error: unexpected token ")", expected a natural number (e.g. 123).
(module (memory))
               ^
;;; STDERR ;;)
